[package]
name = "goku"
version = "0.1.1"
authors = ["k-nasa <htilcs1115@gmail.com>"]
description = "goku is a HTTP load testing application written in Rust"
keywords = ["cli", "goku", "load-testing", "performance", "http"]
categories = ["command-line-utilities", "development-tools::profiling"]
repository = "https://github.com/k-nasa/goku"
license="MIT"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["unstable"] }
clap = "2.34.0"
env_logger = "0.9.0"
log = "0.4.17"
url = "2.2.2"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
indicatif = "0.16.2"
